# eeg-decoding

./: .gitignore  LICENSE  Makefile  README.md  environment.yml  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
eeg_hybrid/: __init__.py  dataset.py  features.py  plots.py
eeg_hybrid/modeling/: predict.py  train.py
