[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "eeg_hybrid"
version = "0.0.1"
description = "EEG-based decoder using CNN + attention hybrid architecture"
authors = [
  { name = "Blake Barbour" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.11.0"


[tool.ruff]
line-length = 99
src = ["eeg_hybrid"]
include = ["pyproject.toml", "eeg_hybrid/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["eeg_hybrid"]
force-sort-within-sections = true

